--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@ button:hover{background:#45a049;}
 
 <!-- Register -->
 <div class="container" id="registerPage" style="display:none;">
-<h2>Daftar</h2>
+<h2>Daftarkan</h2>
 <input type="text" id="regEmail" placeholder="Email"><br>
 <input type="password" id="regPassword" placeholder="Password"><br>
 <input type="text" id="regToken" placeholder="Token"><br>
